--- a/ukwiecona/scss/layout/_section-header.scss
+++ b/ukwiecona/scss/layout/_section-header.scss
@@ -102,6 +102,10 @@
         0, -2,
         '100%', 'auto');
   background-repeat: no-repeat;
+
+  div {
+    transform-style: preserve-3d;
+  }
   
 
 
