--- a/ukwiecona/scss/layout/_section-services.scss
+++ b/ukwiecona/scss/layout/_section-services.scss
@@ -59,7 +59,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #F2B9C6;
+    background-color: $pink;
     overflow: hidden;
     border-radius: 50%;
     width: 100%;
