--- a/ukwiecona/scss/main.scss
+++ b/ukwiecona/scss/main.scss
@@ -53,6 +53,7 @@ sass/
 
 @import
   "layout/section-header",
+  "layout/section-gallery",
   "layout/section-services",
   "layout/section-contact",
   "layout/form",
