--- a/ukwiecona/scss/utils/_mixins.scss
+++ b/ukwiecona/scss/utils/_mixins.scss
@@ -85,15 +85,22 @@
   }
 }
 
+//Shadow effect
+@mixin shadow {
+  box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
+}
+
 // Stitched effect and shadow
 @mixin stitched {
   outline: 1px dashed;
   outline-offset: -0.35em;
-  box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.5);
+  @include shadow;
 
   @include rwd('medium' and 'large') {
     outline-width: 1.75px;
   }
 }
+
+
 
 
