--- a/ukwiecona/scss/utils/_variables.scss
+++ b/ukwiecona/scss/utils/_variables.scss
@@ -28,3 +28,6 @@ $smaller-gap: 2.5vh;
 
 //Colors
 $pink: #FFE6F0;
+
+//Dodać do mixin aby zmieniała się w zależności od szerokości ekranu
+$card-width: 27vw;
