--- a/ukwiecona/scss/main.scss
+++ b/ukwiecona/scss/main.scss
@@ -49,7 +49,8 @@ sass/
 
 @import
   "components/buttons",
-  "components/header-bars";
+  "components/header-bars",
+  "components/modal";
 
 @import
   "layout/section-header",
