--- a/ukwiecona/scss/layout/_footer.scss
+++ b/ukwiecona/scss/layout/_footer.scss
@@ -1,6 +1,8 @@
 footer {
-    background-color: $pink;
+    //background-color: $pink;
     @include centerer(true, false, 'row');
+    @include stitched;
+    @include shadow;
 }
 
 
