--- a/ukwiecona/scss/layout/_section-header.scss
+++ b/ukwiecona/scss/layout/_section-header.scss
@@ -25,13 +25,13 @@
     @include background-img (
         'header-background', 'jpg', 
          0, 0,
-        '100vw', '100vh');
+        '100vw', 'auto');
   }
   @include rwd('large') {
     @include background-img (
         'header-background', 'jpg', 
          0, 0,
-        '100vw', '100vh');
+        '100vw', 'auto');
   }
 }
 
