Added images in gallery

--- a/ukwiecona/css/main.css
+++ b/ukwiecona/css/main.css
@@ -948,8 +948,8 @@ div.header-bar.first {
 }
 
 .gallery-img {
-  width: auto;
-  height: 100%;
+  width: 100%;
+  height: auto;
 }
 
 .gallery-description {
